5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1800_2570.log
== TEST (2019-06-12 07:37:02) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

m = sum(n)/size(n)
aux = 0

for i in range(size(n)):
	aux = aux * abs(a[i]-m)
	p = aux**1/size(n)
print(round(p, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 07:37:48) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

m = sum(n)/size(n)
aux = 0

for i in range(size(n)):
	aux = aux * abs(n[i]-m)
	p = aux**1/size(n)
print(round(p, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 07:38:11) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

m = sum(n)/size(n)
aux = 1

for i in range(size(n)):
	aux = aux * abs(n[i]-m)
	p = aux**1/size(n)
print(round(p, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 07:38:46) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

m = sum(n)/size(n)
aux = 1

for i in range(size(n)):
	aux = aux * abs(n[i]-m)
	p = (aux)**1/size(n)
print(round(p, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 07:39:03) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

m = sum(n)/size(n)
aux = 1

for i in range(size(n)):
	aux = aux * abs(n[i]-m)
	p = (aux)**1/2
print(round(p, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:35:46) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

m = sum(n)/size(n)
aux = 1

for i in range(size(n)):
	aux = aux * abs(n[i]-m)
	p = (aux)**size(n)
print(round(p, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:36:42) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

m = sum(n)/size(n)
aux = 1

for i in range(size(n)):
	aux = aux * abs(n[i]-m)
	p = (aux)*1/size(n)
print(round(p, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:37:11) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

m = sum(n)/size(n)
aux = 1

for i in range(size(n)):
	aux = aux * abs(n[i]-m)
	p = (aux)**1/size(n)
print(round(p, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:40:30) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

m = sum(n)/size(n)
aux = 1

for i in range(size(n)):
	aux = aux * abs(n[i]-m)
	p = (aux)*1/size(n)
print(round(p, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:01:01) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

m = sum(n)/size(n)
aux = 1

for i in range(size(n)):
	aux = aux * abs(n[i]-m)
	p = (aux)**1/size(n)
print(round(p, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:14:48) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

m = sum(n)/size(n)
aux = 1

for i in range(size(n)):
	aux = aux * abs(n[i]-m)
	p = (aux)
print(round(p, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:16:46) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

m = sum(n)/size(n)
aux = 1

for i in range(size(n)):
	aux = aux * abs(n[i]-m)
	p = (aux).sqrt()
print(round(p, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:17:37) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

m = sum(n)/size(n)
aux = 1

for i in range(size(n)):
	aux = aux * abs(n[i]-m)
	p = math.sqrt(aux)
print(round(p, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:19:34) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

m = sum(n)/size(n)
aux = 

for i in range(size(n)):
	aux = aux + abs(n[i]-m)
	p = math.sqrt(aux)
print(round(p, 3))
-- ERROR:
File "XXXX", line 5
    aux = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:19:41) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

m = sum(n)/size(n)
aux = 0 

for i in range(size(n)):
	aux = aux + abs(n[i]-m)
	p = math.sqrt(aux)
print(round(p, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:20:22) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

m = sum(n)/size(n)
aux = 0 

for i in range(size(n)):
	aux = aux + abs(n[i]-m)
	p = math.sqrt(aux)
print(round(p, 3))
-- EXECUTION TIME:
1.18008
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
9.649
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
5.647
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
11.225
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:20:58) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

m = sum(n)/size(n)
aux = 0 

for i in range(size(n)):
	aux = aux + abs(n[i]-m)
	p = aux **1/size(n)
print(round(p, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:21:48) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

m = sum(n)/size(n)
aux = 0 

for i in range(size(n)):
	aux = aux + abs(n[i]-m)
	p = aux *1/size(n)
print(round(p, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:22:26) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

m = sum(n)/size(n)
aux = 0 

for x in range(size(n)):
	aux = aux + abs(n[x]-m)
	p = aux *1/size(n)
print(round(p, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:30:55) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

m = sum(n)/size(n)
aux = 0 

for x in range(size(n)):
	a = n[x]-m
	aux = abs(a)
	p = aux *1/size(n)
print(round(p, 3))
print(zeros, size(m))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:31:33) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

m = sum(n)/size(n)
aux = 1 

for x in range(size(n)):
	a = n[x]-m
	aux = abs(a)
	p = aux *1/size(n)
print(round(p, 3))
print(zeros, size(m))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:34:22) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

m = sum(n)/size(n)
aux = zeros(i, dtype=float) 

for i in range(size(n)):
print(aux)
	
	
-- ERROR:
File "XXXX", line 8
    print(aux)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:34:54) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

m = sum(n)/size(n)
aux = zeros(i, dtype=float) 

for i in range(size(n)):
	print(aux)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:00) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

m = sum(n)/size(n)
aux = zeros(x, dtype=float) 
x = 0 
for i in range(size(n)):
	x = x + 1
print(aux)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:25) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))
x = 0
m = sum(n)/size(n)
aux = zeros(x, dtype=float) 
 
for i in range(size(n)):
	x = x + 1
print(aux)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:58) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))
x = 0
m = sum(n)/size(n)
 
 
for i in range(size(n)):
	x = x + 1
aux = zeros(x, dtype=float
print(aux)

	
	
-- ERROR:
File "XXXX", line 10
    print(aux)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:42:46) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))
m = sum(m)/size(m)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:42:56) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))
m = sum(m)/size(m)
print(m)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:43:19) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))
m = sum(n)/size(n)
print(m)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:02:44) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))
m = sum(n)/size(n)

aux = 1
for i in range(size(n)):
	a = abs(n[i]+m) 
	aux = aux + a
	p = aux*1/size(n)
	

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:02:56) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))
m = sum(n)/size(n)

aux = 1
for i in range(size(n)):
	a = abs(n[i]+m) 
	aux = aux + a
	p = aux*1/size(n)
print(p)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:03:03) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))
m = sum(n)/size(n)

aux = 1
for i in range(size(n)):
	a = abs(n[i]+m) 
	aux = aux + a
p = aux*1/size(n)
print(p)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:06:08) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))
m = sum(n)/size(n)

aux = 1
for i in range(size(n)):
	aux= aux * (abs(n[i]+m))
	
p = aux*1/size(n)
print(p)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:06:30) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))
m = sum(n)/size(n)

aux = 1
for i in range(size(n)):
	aux= aux * (abs(n[i]-m))
	
p = aux*1/size(n)
print(p)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:06:54) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))
m = sum(n)/size(n)

aux = 1
for i in range(size(n)):
	aux= (aux)/ * abs(n[i]-m)
	
p = aux*1/size(n)
print(p)

	
	
-- ERROR:
File "XXXX", line 7
    aux= (aux)/ * abs(n[i]-m)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:07:03) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))
m = sum(n)/size(n)

aux = 1
for i in range(size(n)):
	aux= (aux) * abs(n[i]-m)
	
p = aux*1/size(n)
print(p)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:07:16) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))
m = sum(n)/size(n)

aux = 1
for i in range(size(n)):
	aux= (aux) + abs(n[i]-m)
	
p = aux*1/size(n)
print(p)

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:07:47) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))
m = sum(n)/size(n)

aux = 1
for i in range(size(n)):
	aux= (aux) + abs(n[i]-m)
	
p = aux*1/size(n)
print(round(p, 3)

	
	
-- ERROR:
File "XXXX", line 14
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:07:55) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))
m = sum(n)/size(n)

aux = 1
for i in range(size(n)):
	aux= (aux) + abs(n[i]-m)
	
p = aux*1/size(n)
print(round(p, 3))

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:13:04) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))
m = sum(n)/size(n)

aux = 1
for i in range(size(n)):
	aux= (aux) + abs(n[i]-m)
	
p = aux*1/size(n)
print(round(p, 3))

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:14:48) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))
m = sum(n)/size(n)

aux = 1
for i in range(size(n)):
	aux= (aux) + abs(n[i]-m)
	
p = aux*1/size(n)
print(round(p, 3))

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:15:30) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))
m = sum(n)/size(n)

aux = 0
for i in range(size(n)):
	aux= (aux) + abs(n[i]-m)
	
p = aux*1/size(n)
print(round(p, 3))

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:47:42) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

a = 1
m =(sum(n)/size(n))

for i in range(size(n)):
	a = a * (n[i]-m)**2
	d = a**0.5
print(round(d, 3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:48:21) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

a = 1
m =(sum(n)/size(n))

for i in range(size(n)):
	a = a * (n[i]-m)
	d = a**0.5
print(round(d, 3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:48:45) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

a = 1
m =(sum(n)/size(n))

for i in range(size(n)):
	a = a * abs(n[i]-m)
	d = a**0.5
print(round(d, 3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:49:05) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

a = 1
m =(sum(n)/size(n))

for i in range(size(n)):
	a = a * abs(n[i]-m)
	d = a**1/size(n)
print(round(d, 3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:49:20) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

a = 1
m =(sum(n)/size(n))

for i in range(size(n)):
	a = a + abs(n[i]-m)
	d = a**1/size(n)
print(round(d, 3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:49:37) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))

a = 0
m =(sum(n)/size(n))

for i in range(size(n)):
	a = a + abs(n[i]-m)
	d = a**1/size(n)
print(round(d, 3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:04:52) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(tur)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] = c[i] + abs(n[i]-m)
	
print(round(c, 3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:05:12) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] = c[i] + abs(n[i]-m)
	
print(round(c, 3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:05:53) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =round(c[i] + abs(n[i]-m), 3)
	
print(c)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:09:29) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =round(c[i] + abs(n[i]-m), 3)
aux = 1
for i in range(size(c)):
	aux = aux * c[i]
p = aux*1/size(c)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:09:52) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =round(c[i] + abs(n[i]-m), 3)
aux = 1
for i in range(size(c)):
	aux = aux * c[i]
p = aux*1/size(c)
print(p)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:10:19) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =round(c[i] + abs(n[i]-m), 3)
aux = 1
for i in range(size(c)):
	aux = aux * c[i]
p = aux*1/2
print(p)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:30:06) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =round(c[i] + abs(n[i]-m), 3)
aux = 1
for i in range(size(c)):
	aux = aux * c[i]
p = aux/size(c)
print(p)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:30:35) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =round(c[i] + abs(n[i]-m), 3)
aux = 1
for i in range(size(c)):
	aux = aux * c[i]
p = aux*1/size(c)
print(p)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:30:59) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =round(c[i] + abs(n[i]-m), 3)
aux = 1
for i in range(size(c)):
	aux = aux * c[i]
p = aux*(1/size(c))
print(p)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:31:22) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =round(c[i] + abs(n[i]-m), 3)
aux = 1
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(p)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:32:00) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =round(c[i] + abs(n[i]-m), 3)
aux = 1
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 08:32:20) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =round(c[i] + abs(n[i]-m), 3)
aux = 1
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- EXECUTION TIME:
1.05293
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.433
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
0.0
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:32:25) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =round(c[i] + abs(n[i]-m), 3)
aux = 1
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:32:34) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =round(c[i] + abs(n[i]-m), 3)
aux = 1
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:33:01) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =round(c[i] + abs(n[i]-m), 3)
aux = 1
for i in range(size(c)):
	aux = aux * c[i]
p = aux**1/size(c)
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 08:33:21) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =round(c[i] + abs(n[i]-m), 3)
aux = 1
for i in range(size(c)):
	aux = aux * c[i]
p = aux**1/size(c)
print(round(p, 3))
	
	
-- EXECUTION TIME:
1.05551
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
23961600.0
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
0.0
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:33:39) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 1
for i in range(size(c)):
	aux = aux * c[i]
p = aux**1/size(c)
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:34:14) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 1
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:36:59) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 1
for i in range(size(c)):
	aux = aux * c[i]
p = aux+0.62**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:37:31) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 1,1
for i in range(size(c)):
	aux = aux * c[i]
p = aux+**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
File "XXXX", line 20
    p = aux+**(1/size(c))
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:37:38) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 1,1
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:38:03) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 1.1
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:38:14) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 1.2
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:38:24) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 1.3
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:38:35) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 1.4
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:38:46) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 1.5
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:38:53) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 1.5
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:39:02) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 1.6
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:39:17) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 1.7
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:39:28) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 1.8
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:39:44) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 1.9
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:40:02) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 2
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:40:21) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 1.95
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:40:32) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 1.94
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:40:43) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 1.93
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 08:40:56) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 1.93
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- EXECUTION TIME:
1.20984
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
9.072
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
0.0
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:41:00) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 1.93
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:41:47) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =round((sum(n)/size(n),3)
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 1
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
File "XXXX", line 6
    a = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:42:03) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =round((sum(n)/size(n),3))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 1
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:42:15) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =round((sum(n)/size(n), 3))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 1
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:42:42) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0
b = 0


for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 1
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:45:02) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0



for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 1
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:57:35) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0



for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)
print(c)
for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
aux = 1
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:58:08) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0



for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
print(c)
aux = 1
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:59:25) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0



for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
print(c)
aux = 1
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:00:10) 
-- CODE:
from numpy import*
n = array(eval(input("digite: ")))


m =(sum(n)/size(n))
a = 0



for i in range(size(n)): 
		a = a + 1
	
c = zeros(a, dtype=int)

for i in range(size(n)):
	c[i] =c[i] + abs(n[i]-m)
print(c)
aux = 1
for i in range(size(c)):
	aux = aux * c[i]
p = aux**(1/size(c))
print(round(p, 3))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:09:10) 
-- CODE:
from numpy import*

n = array(eval(input("digite: ")))

aux = 1
m =sum(n)/size(n)


for i in range(size(n)):
	a = 0
	a = a + abs(n[i]-m)
	aux = aux * a
	
p = aux**(1/size(n))
print(round(p, 3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:09:18) 
-- CODE:
from numpy import*

n = array(eval(input("digite: ")))

aux = 1
m =sum(n)/size(n)


for i in range(size(n)):
	a = 0
	a = a + abs(n[i]-m)
	aux = aux * a
	
p = aux**(1/size(n))
print(round(p, 3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 09:09:30) 
-- CODE:
from numpy import*

n = array(eval(input("digite: ")))

aux = 1
m =sum(n)/size(n)


for i in range(size(n)):
	a = 0
	a = a + abs(n[i]-m)
	aux = aux * a
	
p = aux**(1/size(n))
print(round(p, 3))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:09:51) 
-- CODE:
from numpy import*

n = array(eval(input("digite: ")))

aux = 1
m =sum(n)/size(n)


for i in range(size(n)):
	a = 0
	a = a + abs(n[i]-m)
	aux = aux * a
	
p = aux**(1/size(n))
print(round(p, 3))
	
-- EXECUTION TIME:
1.01173
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.212
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
